# lg2m

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRIOR-ART.md  README.md  pyproject.toml
.claude/commands/agent-os/: shape-spec.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/specs/2026-06-14-1642-foundation-ir-parsing/: plan.md  references.md  shape.md  standards.md
agent-os/specs/2026-06-14-1907-annotations-router/: plan.md  references.md  shape.md  standards.md
agent-os/specs/2026-06-14-2130-introspect-diff-report/: plan.md  references.md  shape.md  standards.md
agent-os/specs/2026-06-14-2146-langgraph-introspect-pipeline/: plan.md  references.md  shape.md  standards.md
agent-os/specs/2026-06-14-2225-cli-typer/: plan.md  references.md  shape.md  standards.md
agent-os/specs/2026-06-14-2301-scaffold-gen/: plan.md  references.md  shape.md  standards.md
agent-os/specs/2026-06-15-0954-prose-sync/: plan.md  references.md  shape.md  standards.md
agent-os/specs/2026-06-15-1058-layer-6-gen-fidelity/: plan.md  references.md  shape.md  standards.md
agent-os/specs/2026-06-15-1416-sync-cli-verb/: plan.md  references.md  shape.md  standards.md
agent-os/standards/: index.yml
agent-os/standards/error-handling/: error-handling.md
docs/: DESIGN.md  prose-sync.md
examples/: README.md
examples/support_pipeline/: README.md  lg2m.toml
examples/support_pipeline_native/: README.md  introspect.py  langchain_app.py  langgraph_app.py  requirements.txt
src/lg2m/: __init__.py  cli.py  ir.py  pipeline.py
tests/: _oracle.py  _roundtrip.py  conftest.py  test_assemble.py  test_cli.py  test_cli_gen.py  test_cli_sync.py  test_config_loader.py  test_decorators.py  test_diff_categories.py  test_engine.py  test_init_exports.py  test_introspect.py  test_ir.py  test_langgraph_adapter.py  test_loader.py  test_lockfile.py  test_markdown.py  test_merge.py  test_mermaid.py  test_meta.py  test_normalize.py  test_pipeline.py  test_reader.py  test_registry.py  test_report.py  test_resolve.py  test_round_trip_support_pipeline.py  test_router.py  test_scaffold_codegen.py  test_scaffold_markdown.py  test_schema.py  test_sync_e2e.py  test_sync_engine.py  test_tables.py  test_write_md.py  test_write_py.py
tests/fixtures/: mini_pipeline.md
(+77 files in other folders)
